kubernetes_dz8/kube/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geekbrains
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prod
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: geekbrains
            port:
              number: 8000
